# todoer

backend/: main.py
frontend/: Cargo.toml  index.html  package-lock.json
frontend/src/: main.rs
