[package]
name = "todoer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
serde = "1.0.142"
serde_derive = "1.0.142"
strum = "0.24.1"
strum_macros = "0.24.2"
yew = "0.19.3"
gloo-utils = "0.1.4"
wasm-bindgen-futures = "0.4.32"
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3"
feature = [
    "HtmlInputElement",
]
